API Doc Changes
