# docs/swagger.json
@@ -58,7 +58,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "{\\\"message\\\": \\\"Ok\\\"}",
                         "schema": {
                             "type": "string"
@@ -88,7 +88,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "{\\\"message\\\": \\\"Ok\\\"}",
                         "schema": {
                             "type": "string"
